--- a/htdocs/css/kmom01.css
+++ b/htdocs/css/kmom01.css
@@ -15,8 +15,19 @@
     display: none;
 }
  
- 
- .right img{
+ body{
+     background: rgb(0, 71, 80);
+     color: white;
      
-     width: 100px;
+ }
+
+ .wrap-all{
+     width: 100%;
+     margin: auto;
+     text-align: center;
+
+ }
+
+ .wrap-all a{
+     color: white;
  }
