--- a/htdocs/css/04_dark.css
+++ b/htdocs/css/04_dark.css
@@ -4977,7 +4977,7 @@ a.rm-button.rm-clicked .rm-button-face-2 {
   * My own settings, not currently in their own module.
   */
 body {
-  font: 16px/1.5 "Arial";
+  font: 16px/1.5 "sans-serif";
 }
 h1,
 h2,
